Display debug data on error

--- a/todoapp/templates/err.html
+++ b/todoapp/templates/err.html
@@ -6,4 +6,5 @@
 </head>
 <body>
     <h2 style="text-align: center;">{{ err_text }}</h2>
+    <p style="font-family: monospace; font-size: 8px;"> {{ debug_info }} </p>
 </body>
